# game

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cli
.github/scripts/: deploy-hetzner-server.sh
.github/workflows/: coverage.yml  deploy-hetzner.yml  quality-gate.yml
docs/: architecture.md  movement.md  networking.md  ui-and-client.md  worlds-and-saves.md
src/: app.rs  cli.rs  controller.rs  items.rs  lib.rs  main.rs  net.rs  protocol.rs  resources.rs  save.rs  server.rs  steam.rs  world.rs
src/app/: scene.rs  state.rs  systems.rs  ui.rs
src/app/scene/: assets.rs  components.rs  mesh.rs  world.rs
src/app/scene/mesh/: player.rs  trees.rs
src/app/state/: dialogs.rs  inventory.rs  menu.rs  mod.rs  runtime.rs  settings.rs  tests.rs  toasts.rs
src/app/systems/: audio.rs  auto_connect.rs  camera.rs  display.rs  effects.rs  input.rs  items.rs  network.rs  node_death.rs  players.rs  quit.rs  settings.rs
src/app/systems/camera/: follow.rs
src/app/systems/input/: inventory_shortcuts.rs  movement.rs
src/app/systems/items/: pickup.rs  resource_nodes.rs
src/app/ui/: chat.rs  confirm.rs  hud.rs  inventory.rs  menu.rs  modal.rs  multiplayer.rs  options.rs  pause.rs  peer_overlay.rs  theme.rs  toast.rs  worlds.rs
src/app/ui/inventory/: drag.rs  pickup.rs  slot.rs
src/app/ui/multiplayer/: direct_connect.rs
src/app/ui/theme/: buttons.rs  mod.rs  spacing.rs
src/app/ui/worlds/: mod.rs  table.rs
src/app/ui/worlds/dialogs/: create.rs  edit.rs  shared.rs
src/cli/: multiplayer_test.rs
src/controller/: collision.rs  grid.rs  mod.rs  movement.rs  tests.rs
src/net/: client.rs  codec.rs  dedicated.rs  host.rs  local.rs  protocol.rs  reliability.rs  tests.rs
src/net/dedicated/: admin.rs  mod.rs
src/net/host/: admin.rs  handle.rs  routing.rs
src/server/: connection.rs  inventory.rs  movement.rs  resource_nodes.rs  tests.rs
src/server/tests/: connection.rs  inventory.rs  mod.rs  movement.rs  resource_nodes.rs
