[package]
name = "game"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
default-run = "game"

[features]
default = []
steam = ["lightyear/steam"]

[dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["wav"] }
bevy_egui = "0.39.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
lightyear = { version = "0.26.4", features = ["input_native", "netcode", "udp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
