[package]
name = "game"
version = "0.8.0"
edition = "2024"
rust-version = "1.94"
default-run = "game"

[features]
default = []
steam = ["lightyear/steam"]
# Dev-only. Speeds up local iteration; do not enable for release builds.
dev-fast = ["bevy/dynamic_linking"]

[dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["mp3", "wav"] }
bevy_egui = "0.39.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
lightyear = { version = "0.26.4", default-features = false, features = ["client", "server", "netcode", "udp"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rapier3d = "0.32.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
zstd = "0.13.3"

# Optimize dependencies (bevy, rapier3d, lightyear) even in dev builds so
# `./cli dev` hits playable frame rates. Our own crate stays at the default
# opt-level so incremental rebuilds remain fast.
[profile.dev.package."*"]
opt-level = 3
